my walyon mobile resposive--full body margin left fix

--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ animation: sliders 9s infinite linear;
 
    .sub-home p{
       font-family: sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 26px;
     color: #fff;
    }
